Included the body section with header, main, and footer and added the featured-product section with products

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Khalifa Krafted</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Fashion Store</h1>
+        <h1>Khalifa Krafted</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -22,19 +22,59 @@
 
     <main>
         <section class="hero">
-            <h2>Welcome to Fashion Store</h2>
-            <p>Discover the latest trends in shoes, apparel, and accessories.</p>
+            <h2>Welcome to Khalifa Krafted</h2>
+            <p>Discover bespoke hand-crafted leather products designed to reflect your individuality.</p>
             <a href="#" class="btn">Shop Now</a>
         </section>
-
         <section class="featured-products">
             <h2>Featured Products</h2>
-            <!-- Featured products will go here -->
+            <div class="product">
+                <img src="images/wallet.jpg" alt="Leather Wallet">
+                <h3>Leather Wallet</h3>
+                <p class="price">Ksh2,550</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/belts.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="price">Ksh2,000</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/straps.jpg" alt="Watch Strap">
+                <h3>Watch Strap</h3>
+                <p class="price">Ksh1,500</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Laptop Bags">
+                <h3>Laptop Bags</h3>
+                <p class="price">Ksh2,500</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Laptop Bags">
+                <h3>Laptop Bags</h3>
+                <p class="price">Ksh2,500</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Laptop Bags">
+                <h3>Laptop Bags</h3>
+                <p class="price">Ksh2,500</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Laptop Bags">
+                <h3>Laptop Bags</h3>
+                <p class="price">Ksh2,500</p>
+                <a href="#" class="btn">View Details</a>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Fashion Store. All rights reserved.</p>
+        <p>&copy; 2024 Khalifa Krafted. All rights reserved.</p>
     </footer>
 </body>
 </html>
