--- a/index.html
+++ b/index.html
@@ -28,47 +28,86 @@
         </section>
         <section class="featured-products">
             <h2>Featured Products</h2>
+        </section>
+        <section class="products-container">
             <div class="product">
-                <img src="images/wallet.jpg" alt="Leather Wallet">
+                <img src="images/belts.jpg" alt="Leather Wallet">
                 <h3>Leather Wallet</h3>
-                <p class="price">Ksh2,550</p>
-                <a href="#" class="btn">View Details</a>
+                <p class="description"></p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/belts.jpg" alt="Leather Belt">
+                <img src="images/shoe.jpg" alt="Leather Belt">
                 <h3>Leather Belt</h3>
-                <p class="price">Ksh2,000</p>
-                <a href="#" class="btn">View Details</a>
+                <p class="description"></p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/straps.jpg" alt="Watch Strap">
-                <h3>Watch Strap</h3>
-                <p class="price">Ksh1,500</p>
-                <a href="#" class="btn">View Details</a>
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description"></p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/laptop.jpg" alt="Laptop Bags">
-                <h3>Laptop Bags</h3>
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description"></p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description"></p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </section>
+        <section class="product-listing">
+            <div class="product">
+                <img src="images/wallet.jpg" alt="Product 1">
+                <h3>Product 1</h3>
+                <p class="description">Description of Product 1</p>
+                <p class="price">$20.00</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product">
+                <img src="images/wallet.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2,500</p>
-                <a href="#" class="btn">View Details</a>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/laptop.jpg" alt="Laptop Bags">
-                <h3>Laptop Bags</h3>
+                <img src="images/wallet.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2,500</p>
-                <a href="#" class="btn">View Details</a>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/laptop.jpg" alt="Laptop Bags">
-                <h3>Laptop Bags</h3>
-                <p class="price">Ksh2,500</p>
-                <a href="#" class="btn">View Details</a>
+                <img src="images/wallet.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description">Classic leather belt with a timeless design and durable construction.</p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
-                <img src="images/laptop.jpg" alt="Laptop Bags">
-                <h3>Laptop Bags</h3>
-                <p class="price">Ksh2,500</p>
-                <a href="#" class="btn">View Details</a>
+                <img src="images/wallet.jpg" alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description">Classic leather belt with a timeless design and durable construction.</p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product">
+                <img src="images/wallet.jpg"  alt="Leather Belt">
+                <h3>Leather Belt</h3>
+                <p class="description">Classic leather belt with a timeless design and durable construction.</p>
+                <p class="price">Ksh2500</p>
+                <button class="buy-btn">Buy Now</button>
             </div>
         </section>
     </main>
