--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Shoes</a></li>
-                <li><a href="#">Apparel</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Cart</a></li>
+                <li><a href="#">Wallets</a></li>
+                <li><a href="#">Belts</a></li>
+                <li><a href="#">WatchStraps</a></li>
+                <li><a href="#">Bags</a></li>
             </ul>
         </nav>
     </header>
@@ -31,84 +31,105 @@
         </section>
         <section class="products-container">
             <div class="product">
-                <img src="images/belts.jpg" alt="Leather Wallet">
-                <h3>Leather Wallet</h3>
-                <p class="description"></p>
-                <p class="price">Ksh2500</p>
-                <button class="buy-btn">Buy Now</button>
+                <img src="images/laptop.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
             </div>
             <div class="product">
-                <img src="images/shoe.jpg" alt="Leather Belt">
-                <h3>Leather Belt</h3>
-                <p class="description"></p>
-                <p class="price">Ksh2500</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
-                <img src="images/laptop.jpg" alt="Leather Belt">
-                <h3>Leather Belt</h3>
-                <p class="description"></p>
-                <p class="price">Ksh2500</p>
-                <button class="buy-btn">Buy Now</button>
+                <img src="images/laptop.jpg" alt="Leather Wallet">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
             </div>
             <div class="product">
                 <img src="images/laptop.jpg" alt="Leather Belt">
-                <h3>Leather Belt</h3>
-                <p class="description"></p>
-                <p class="price">Ksh2500</p>
-                <button class="buy-btn">Buy Now</button>
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
             </div>
             <div class="product">
                 <img src="images/laptop.jpg" alt="Leather Belt">
-                <h3>Leather Belt</h3>
-                <p class="description"></p>
-                <p class="price">Ksh2500</p>
-                <button class="buy-btn">Buy Now</button>
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="images/laptop.jpg" alt="Leather Belt">
+                <div class="product-info">
+                    <h3>Laptop Slip Bag</h3>
+                    <p class="price">Kes 2,000.00</p>
+                </div>
             </div>
         </section>
         <section class="product-listing">
-            <div class="product">
+            <!-- <div class="product">
                 <img src="images/wallet.jpg" alt="Product 1">
                 <h3>Product 1</h3>
                 <p class="description">Description of Product 1</p>
                 <p class="price">$20.00</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/wallet.jpg" alt="Leather Belt">
                 <h3>Leather Belt</h3>
                 <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2,500</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/wallet.jpg" alt="Leather Belt">
                 <h3>Leather Belt</h3>
                 <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2,500</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/wallet.jpg" alt="Leather Belt">
                 <h3>Leather Belt</h3>
                 <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2500</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/wallet.jpg" alt="Leather Belt">
                 <h3>Leather Belt</h3>
                 <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2500</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/wallet.jpg"  alt="Leather Belt">
                 <h3>Leather Belt</h3>
                 <p class="description">Classic leather belt with a timeless design and durable construction.</p>
                 <p class="price">Ksh2500</p>
                 <button class="buy-btn">Buy Now</button>
-            </div>
+            </div> -->
         </section>
     </main>
 
