Replaced the featured-section with clean code and re-edited the css

--- a/index.html
+++ b/index.html
@@ -65,27 +65,30 @@
                     <p class="price">Kes 2,000.00</p>
                 </div>
             </div>
-            <div class="product">
+
+
+
+            <!-- <div class="product">
                 <img src="images/laptop.jpg" alt="Leather Belt">
                 <div class="product-info">
                     <h3>Laptop Slip Bag</h3>
                     <p class="price">Kes 2,000.00</p>
                 </div>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/laptop.jpg" alt="Leather Belt">
                 <div class="product-info">
                     <h3>Laptop Slip Bag</h3>
                     <p class="price">Kes 2,000.00</p>
                 </div>
-            </div>
-            <div class="product">
+            </div> -->
+            <!-- <div class="product">
                 <img src="images/laptop.jpg" alt="Leather Belt">
                 <div class="product-info">
                     <h3>Laptop Slip Bag</h3>
                     <p class="price">Kes 2,000.00</p>
                 </div>
-            </div>
+            </div> -->
         </section>
         <section class="product-listing">
             <!-- <div class="product">
